--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,5 +10,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ColorSelectionActivity"/>
     </application>
 </manifest>
