--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,8 @@
     
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"/>
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <activity android:name=".PaintDroidActivity" android:label="@string/app_name">
+        <activity android:name=".PaintDroidActivity" android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
